# grouped-query-attention-pytorch

./: .coveragerc  .dockerignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark.py  benchmark_attention.py  pyproject.toml  setup.py  templatize
.github/disabled-workflows/: publish.yaml
.github/workflows/: publish.yaml  test-slow.yaml  test.yaml
grouped_query_attention_pytorch/: __init__.py  attention.py  t5.py  transformer.py
grouped_query_attention_pytorch/utils/: benchmark.py
scripts/: README.md  benchmark_attention.py  benchmark_t5.py
tests/: conftest.py  test_attention.py  test_missing.py  test_t5.py  test_transformer.py
