[build-system]
requires = ["setuptools", "setuptools-scm"]

[project]
name = "grouped_query_attention_pytorch"
authors = [
    {name = "Frank Odom", email = "frank.odom.iii@gmail.com"},
]
description = "grouped-query-attention-pytorch"
license = {text = "MIT"}
dynamic = [
    "version",
    "readme",
]  # NOTE: Must be in sync with [tool.setuptools.dynamic] below
dependencies = [
    # TODO: Check the full range of supported versions
    "einops~=0.6.0",
    "torch>=1.8.0",
    "torchscale~=0.2.0",
]
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools.dynamic]
# NOTE: Must be in sync with 'project.dynamic' above
version = {attr = "grouped_query_attention_pytorch.VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = ["tests"]

# --- extra packages ---
[project.optional-dependencies]
test = [
    "black",
    "kaleido",
    "mypy",
    "plotly",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "xformers==0.0.20",
]
t5 = [
    "sentencepiece",
    "transformers>=4.5.0",
]

[project.scripts]
# Entrypoint scripts


# ----- Linting, Formatting, and Typing -----

[tool.black]
line-length = 88

[tool.mypy]
files = "grouped_query_attention_pytorch/"
check_untyped_defs = "true"
ignore_missing_imports = "true"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report term-missing --cov-fail-under 80"
filterwarnings = "ignore:.*.:DeprecationWarning"

[tool.ruff]
line-length = 88
ignore = ["B905", "E501"]
select = ["B", "C", "E", "F", "I", "W"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.mccabe]
max-complexity = 18